--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h2 {
     color: #ffffff;
     width: 50%;
     margin-top: 20px;
-    margin: 0 auto;
+    margin-left: 0%;
 }
 
 .home-welcome h1{
