--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ h2 {
 }
 
 footer {
-    background: rgb(75, 132, 211);
+    background: #2c559c;
     border: 5px solid #ffffff;
     position:absolute;
     width: 100%;
