--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ h2 {
 }
 
 .travel-container h2 {
-    background-color: #2c559c;
+    background-color: #3f6ab5;
     color: #ffffff;
     width: auto;
     margin-top: 20px;
@@ -319,7 +319,7 @@ h2 {
 }
 
 footer {
-    background: #2c559c;
+    background: #3f6ab5;
     border: 5px solid #ffffff;
     position:absolute;
     width: 100%;
