--- a/css/style.css
+++ b/css/style.css
@@ -122,16 +122,7 @@ h2 {
     margin: 0 auto;
 }
 
-
-.service-img img{
-    display: block;
-    width: 350px;
-    height: 350px;
-    margin-bottom: 20px;
-    margin: 0 auto;
-}
-
-.service-box {
+.services-container{ {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -142,6 +133,14 @@ h2 {
     border-radius: 10px;
     margin: 0 auto;
     text-align: center;
+}
+
+.service-img img{
+    display: block;
+    width: 350px;
+    height: 350px;
+    margin-bottom: 20px;
+    margin: 0 auto;
 }
 
 .skip {
