--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h1 {
 
 }
 h2 {
-    background-color: #3f6ab5;
+    background-color: #2555a7;
     color: #ffffff;
     width: auto;
     margin-top: 20px;
@@ -204,7 +204,7 @@ h2 {
 }
 
 .pets-container h2 {
-    background-color: #2c559c;
+    background-color: #2555a7;
     color: #ffffff;
     width: auto;
     margin-top: 20px;
@@ -322,7 +322,7 @@ h2 {
 }
 
 footer {
-    background: rgb(75, 132, 211);
+    background: #2555a7;
     border: 5px solid #ffffff;
     position:absolute;
     width: 100%;
