--- a/css/style.css
+++ b/css/style.css
@@ -116,13 +116,12 @@ h2 {
     text-align: center;
 }
 .services-container{
-    height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     background: #ffffff;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     padding: 20px;
-    gap: 20px;
+    gap-row: 20px;
     border-radius: 10px;
     margin: 0 auto;
 }
@@ -143,13 +142,12 @@ h2 {
 }
 
 .service-box {
-    height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     background: #ffffff;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     padding: 20px;
-    gap: 20px;
+    gap-row: 20px;
     border-radius: 10px;
     margin: 0 auto;
 }
