--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   background-color: #355ca0;
+   background-color: rgb(58, 97, 151);
    padding: 10px 50px;
 }
 
@@ -78,7 +78,7 @@ body {
 
 h1 {
     font-size: 40px;
-    color: #0d1b69;
+    color: rgb(58, 97, 151);
     font-weight: 600;
     margin-top: 100px;
     text-align: center;
@@ -86,7 +86,7 @@ h1 {
 
 }
 h2 {
-    background-color: #0d1b69;
+    background-color: rgb(58, 97, 151);
     color: #ffffff;
     width: auto;
     margin-top: 20px;
@@ -95,7 +95,7 @@ h2 {
 
 .home-welcome h1{
     font-size: 40px;
-    color: #0d1b69;
+    color: rgb(58, 97, 151);
     font-weight: 600;
     margin-top: 100px;
     text-align: center;
@@ -214,7 +214,7 @@ h2 {
 }
 
 .recipe-container h2 {
-    background-color: #0d1b69;
+    background-color: rgb(58, 97, 151);
     color: #ffffff;
     width: auto;
     margin-top: 20px;
@@ -254,7 +254,7 @@ h2 {
 }
 
 .travel-container h2 {
-    background-color: #0d1b69;
+    background-color: rgb(58, 97, 151);
     color: #ffffff;
     width: auto;
     margin-top: 20px;
@@ -315,7 +315,7 @@ h2 {
 }
 
 footer {
-    background: #0d1b69;
+    background: rgb(58, 97, 151);
     border: 5px solid #ffffff;
     position:absolute;
     width: 100%;
