--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #3468b4;
+    background-color: #fffff;
     color: black;
 }
 
